# practice_go

./: BUILD.bazel  WORKSPACE  build.gradle  rpm.json  settings.gradle
apps/example/exampleTwo/: exampleTwo.go
gradle/wrapper/: gradle-wrapper.properties
nova/apps/example/exampleTwo/: BUILD.bazel
nova/common/utils/: BUILD.bazel  utils.go
