package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")



go_library(
    name = "go_default_library",
    srcs = ["exampleTwo.go"],
    visibility = ["//visibility:private"],
    deps = ["//nova/common/utils:go_default_library"],
)

go_binary(
    name = "exampleTwo",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
    deps = ["logrus"]
)
